[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messenger-logger-callback"
version = "0.2.1"
authors = [
  { name="Riko0", email="grigoriyalexeenko@gmail.com" },
]
description = "Messenger Logger Callback — send training logs to Telegram via a remote server. Standalone logger and Hugging Face Trainer callback."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = [
    "messenger-logger-callback",
    "messenger_logger_callback",
    "messenger logger callback",
    "telegram",
    "training",
    "logger",
    "callback",
    "huggingface",
    "transformers",
    "machine learning",
    "deep learning",
    "training monitor",
    "training logs",
    "telegram bot",
    "clearml",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.25.1",
    "python-dotenv>=1.0.0",
    "transformers>=4.0.0",
]

[project.optional-dependencies]
standalone = []

[project.urls]
Homepage = "https://github.com/Riko0/messenger_logger_callback"
Repository = "https://github.com/Riko0/messenger_logger_callback"
"Bug Tracker" = "https://github.com/Riko0/messenger_logger_callback/issues"
Documentation = "https://github.com/Riko0/messenger_logger_callback#readme"
"Telegram Log Service" = "https://github.com/Riko0/telegram_log_service"
